# autoresearch-cifar10

./: .gitignore  LICENSE  README.md  prepare.py  program.md  pyproject.toml  requirements.txt  train.py
search_results/: results_1min_auto_gen.tsv  results_1min_hand.tsv  results_5min_auto_gen.tsv  results_5min_hand.tsv
